# tabulate

./: CMakeLists.txt  LICENSE  README.md  install-deps  tbl-config.cmake.in
.github/workflows/: test.yml
src/: 3x_ed.c  8x_ed.c  row_flex.c  row_flex.h  tbl.h
src/tbl/: 3x_ed.h  8x_ed.h  align.h  rc.h  row_flex.h  tbl.h
test/: CMakeLists.txt  tbl_3x_ed.c  tbl_8x_ed.c
